--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xorax/sdk",
+  "name": "xorax-sdk",
   "version": "1.0.0",
   "description": "TypeScript SDK for Xorax privacy mixer on Solana",
   "main": "dist/index.js",
